--- a/css/index.css
+++ b/css/index.css
@@ -106,7 +106,7 @@ nav{
 
 /*----- DEPOIMENTOS -----*/
 #depoimentos{
-    height: 350px;
+    height: 400px;
 }
 #depoimentos h1{
     color: #fff;
@@ -126,18 +126,23 @@ nav{
     display: flex;
     flex-direction: column;
 }
-.carousel-control-prev{
-    font-size: 50px;
-    width: 60px;
-    height: 60px;
-    margin-left: 1000px;
-    margin-top: 190px;
+.btn-controles{
+    font-size: 40px;
+    text-decoration: none!important;
+    color: #fff;
+    transition: 0.5s;
 }
-.carousel-control-next{
-    font-size: 50px;
-    width: 60px;
-    height: 60px;
-    margin-top: 190px;
+.btn-controles:hover{
+    color: rgb(218, 218, 218);
+}
+.container-btn-controles{
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    gap: 15px;
+    align-items: center;
 }
 .icone-usuario{
     background-color: #fff;
@@ -229,21 +234,11 @@ footer span, footer a{
     float: none;
     margin-right: 15px;
 }
-
-.carousel-control-prev{
-    font-size: 40px;
-    width: 60px;
-    height: 90px;
-    margin-left: 1px;
-    margin-top: 0px;
+.container-btn-controles{
+    justify-content: space-between;
+    top: 0px;
+    bottom: auto;
 }
-.carousel-control-next{
-    font-size: 40px;
-    width: 60px;
-    height: 90px;
-    margin-top: 0px;
-}
-
 
     /*FOOTER*/
 footer a{
@@ -313,18 +308,10 @@ footer a{
     float: none;
     margin-right: 15px;
 }    
-.carousel-control-prev{
-    font-size: 40px;
-    width: 60px;
-    height: 120px;
-    margin-left: 1px;
-    margin-top: 40px;
-}
-.carousel-control-next{
-    font-size: 40px;
-    width: 60px;
-    height: 120px;
-    margin-top: 40px;
+.container-btn-controles{
+    justify-content: space-between;
+    top: 0px;
+    bottom: auto;
 }
 
     /*FOOTER*/
@@ -378,15 +365,8 @@ footer a{
     height: 120px;
     margin-left: 5px;
 }
-.carousel-control-prev{
-    font-size: 45px;
-    height: 80px;
-    margin-left: 550px;
-}
-.carousel-control-next{
-    font-size: 45px;
-    height: 80px;
-    margin-top: 190px;
+.container-btn-controles{
+    bottom: auto;
 }
 
 }/*FIM TERCEIRA TELA*/
@@ -413,15 +393,8 @@ footer a{
     margin-left: 5px;
     height: 120px;
 }
-.carousel-control-prev{
-    font-size: 45px;
-    height: 60px;
-    margin-left: 780px;
-}
-.carousel-control-next{
-    font-size: 45px;
-    height: 60px;
-    margin-top: 190px;
+.container-btn-controles{
+    bottom: auto;
 }
 
 }/*FIM QUARTA TELA*/
